Fix HelloWorld.java and add some files according to lesson 10